--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^1.8.5",
     "@types/react-redux": "^7.1.24",
     "axios": "^1.0.0",
+    "lodash.debounce": "^4.0.8",
     "next": "12.3.1",
     "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
@@ -26,10 +27,12 @@
     "sass": "^1.55.0"
   },
   "devDependencies": {
+    "@types/lodash.debounce": "^4.0.7",
     "@types/node": "^18.8.2",
     "@types/react": "^18.0.21",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
+    "prettier": "2.7.1",
     "typescript": "^4.8.4"
   }
 }
